Improved combat messages Setting for viewing damage info Fix for scrolling damage not visible on other clients

--- a/less/dragonbane.less
+++ b/less/dragonbane.less
@@ -879,4 +879,20 @@
         user-select: text;
         word-break: break-word;           
     }
+
+    .expandable {
+        display: none;
+    }
+
+    .damage-details {
+        flex: 0 0 100%;
+        position: relative;
+        margin: 0;
+        text-align: center;
+        background: rgba(0, 0, 0, 0.1);
+        border: 1px solid var(--color-border-light-2);
+        border-radius: 3px;
+        box-shadow: 0 0 2px #FFF inset;
+        word-break: break-all;
+      }    
 }
